# ZettleInventoryTracker

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  DockerFile  FILE_STRUCTURE_GUIDE.md  config.py  const.py  constants.py  create_webhook.py  database.db  endpoint.py  google_drive_auth.py  main.py  manual_chacker.py  models.py  pyproject.toml  services.py  setup_db.py  test.py  webhook_handler.py
app/: constants.py  main.py  utils.py
app/core/: config.py  logging.py
app/db/: schemes.py
app/google_drive/: auth.py  client.py  context.py  dataframe_manager.py  drive_data_updayer.py  drive_sync_worker.py  hourly_workflow_runner.py  product_managers.py  services.py  sheet_manager.py  sheet_updater.py
app/models/: google_drive.py  product.py  webhook.py  zettle.py
app/zettle/: auth.py  context.py  data_fetchers.py  services.py  update_drive_data.py  webhook_handler.py  webhook_manager.py
core/: context.py  dataclass.py  models.py  repositories.py  services.py  type_dict.py  utils.py
core/google_drive/: client.py  drive_manager.py  product_managers.py  services.py  sheet_manager.py
core/validation/: inventory_update_validation.py  product_validating.py  zettle_aoth.py
core/zettle/: auth.py  data_fetchers.py  handler.py  services.py  validaton.py  webhook.py
google_drive/: auth.py  client.py  services.py
new_repo/: config.py  main.py
services/: utils.py
services/google_drive/: auth.py  client.py  drive_manager.py  inventory_manager.py  inventory_service.py  (+4 more)
source/: abstract_classes.py  context.py  services.py  utils.py
zettle/: endpint.py  validaton.py
(+18 files in other folders)
