[project]
name = "zettleinventorytracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gsheet-pandas>=0.2.6",
    "gspread>=6.2.1",
    "mypy>=1.17.1",
]

[tool.mypy]
check_untyped_defs = true
